# BlackCat

./: .gitignore  README.md  base_objects.py  blackcat.py  config.cfg  decoders.py  pyproject.toml  utils.py
blackcat/: base_objects.py  config.cfg  core.py  data_processing.py  logger.py  utils.py
blackcat/scripts/: reboot.sh  register_map.txt  run.sh  setup.sh  setup_ext_tdc.sh
calibration/: rc_150  rc_152  rc_154  tdc_cal_150  tdc_cal_152  tdc_cal_154
examples/: launch_tmux_dlm.sh  run_dlm.py
examples/notebooks/: Process_data.ipynb  Run_DLM.ipynb  getting_started.ipynb  test_dogma.ipynb
scripts/: cal.sh  setup.sh  stop.sh
test_scripts/: launch_tmux_dlm.sh  run_dlm.py
tests/: test_blackcat.py
