[project]
name = "blackcat"
version = "0.1.0"
description = "Python wrapper framework for TDC and shell utilities"
authors = [{ name="Chiara Bellenghi", email="chiara.bellenghi@tum.de" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.5",
]

[tool.setuptools.package-data]
"blackcat" = ["scripts/*", "config.cfg"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"