[project]
name = "blackcat"
version = "0.1.0"
description = "Python wrapper framework for TDC and shell utilities"
authors = [{ name="Chiara Bellenghi", email="chiara.bellenghi@tum.de" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.5",
    "notebook>=7.4.0",
]
dogma = ["dogma @ git+https://git.gsi.de/ee-dig/dogma/soft/dogma.git"]

[tool.setuptools.package-data]
"blackcat" = ["scripts/*", "config.cfg"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# Ruff – Python linting and formatting
[tool.ruff]
fix = true
show-fixes = true
line-length = 80
exclude = ["config.cfg"]

[tool.ruff.lint]
# Use rulesets pycodestyle, pyflakes, pyupgrade, flake8-bugbear, flake8-simplify, isort
select = ["D", "E", "F", "UP", "SIM", "I"]
ignore = ["D105", "D107", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy" # Accepts: "google", "numpy", or "pep257".

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true
